Update dependencies + fix quiz spacing issue. Closes #80

--- a/aliemu/styles/collections/plugins.styl
+++ b/aliemu/styles/collections/plugins.styl
@@ -146,15 +146,22 @@ input[type=submit].um-button.um-alt
             transition: .1s !important
 
 +prefix-classes('wpProQuiz_')
-    .answerCorrect
-        background: $green-correct
-        font-weight: bold
-        color: white
+    .correct
+        > span:first-of-type
+            color: $green-correct
+            font-weight: bold
 
-    .answerIncorrect
-        background:$red-incorrect
-        font-weight: bold
-        color: white
+    .incorrect
+        > span:first-of-type
+            color:$red-incorrect
+            font-weight: bold
+    .AnswerMessage
+        margin: 0 0 20px 0
+    .listItem
+        list-style-type: none
+
+    .question_text
+        margin: 0 0 20px 0
 
     .list
         padding-bottom: 0 !important
@@ -162,7 +169,7 @@ input[type=submit].um-button.um-alt
             background: $gray-light
             border-radius: 3px
             padding: 20px !important
-            margin: 10px 0
+            margin: 0 0 20px 0
             .questionListItem
                 list-style: none
                 .questionInput
